# systemtray-napi-core

./: .gitattributes  .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test-import.cjs
.github/workflows/: CI.yml
__test__/: index.spec.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: icon_parse.rs  lib.rs  menu_parse.rs
