
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "systemtray_napi_core"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
image = "0.25.6"
napi-derive = "3.0.0"
objc2-core-foundation = "0.3.1"
rand = "0.9.2"
tao = "0.34.0"
tray-icon = "0.21.1"

[dependencies.napi]
version = "3.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
